--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,8 @@
     <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
     <string name="cancel">Cancel</string>
 
+    <string name="catalog_delete_pets_success">All pets were deleted</string>
+
+    <string name="catalog_delete_pets_failed">Pets deletion failed</string>
+
 </resources>
